agentforce-case-management/force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>