agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>