agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <label>Correlation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>