agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Stores detailed error information captured during integration processing, API callouts, or asynchronous execution failures.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>