agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Processing_Duration_MS__c.field-meta.xml
<CustomField>
    <fullName>Processing_Duration_MS__c</fullName>
    <label>Processing Duration (MS)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>