agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>Stores the outbound JSON request payload sent to the external system for auditing, debugging, and troubleshooting purposes.</description>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>