agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the number of retry attempts performed for the associated integration transaction.</description>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>