agentforce-case-management/force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Represents the outcome of the integration transaction or processing attempt associated with the case.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>