agentforce-case-management/force-app/main/default/objects/Integration_Log__c/validationRules/Maximum_Retry_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Retry_Limit</fullName>
    <active>true</active>
    <description>Prevents runaway aync jobs.</description>
    <errorConditionFormula>Retry_Count__c &gt; 3</errorConditionFormula>
    <errorDisplayField>Retry_Count__c</errorDisplayField>
    <errorMessage>Maximum retry limit exceeded.</errorMessage>
</ValidationRule>